# ZeuSystem

./: 22级计算机系统综合课程设计评分标准.docx  ADDRESS_CONFIG.md  Cargo.toml  DOCS.md  MINISYS_DEPLOYMENT.md  QEMU_TESTING.md  QuickStart.md  README.md  _DOCS_ORGANIZATION.txt  build.sh  package-lock.json  riscv_compiler  simulator.md  simulator.py  test.c  test.s  test_complete.c  test_complete.elf  test_complete.s  test_j.s  test_jal.s  vivado.jou  vivado_10406.backup.jou  vivado_10653.backup.jou  vivado_11070.backup.jou  vivado_11230.backup.jou  vivado_18314.backup.jou  vivado_24463.backup.jou  vivado_35190.backup.jou  vivado_5306.backup.jou  vivado_7594.backup.jou  vivado_8237.backup.jou  vivado_8327.backup.jou  vivado_pid11070.str  vivado_pid11230.str  vivado_pid18314.str  vivado_pid24463.str  vivado_pid25396.str  vivado_pid32032.str  vivado_pid35190.str  (+5 more)
SEU-RISCV-CPU-IDE/: .gitignore  CLI_IDE_TECH_SUMMARY.md  README.md  index.html  main.js  package-lock.json  package.json  preload.js  vivado.jou  vivado_9005.backup.jou  vivado_9491.backup.jou  vivado_pid18539.str
docs/: 00_INDEX_MAIN.md  ARCHIVE.md  COMPLETION_REPORT.md  DEVELOPMENT.md  FINAL_CHECKLIST.md  INDEX.md  ORGANIZATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STAGE_1_assembler_summary.md  STAGE_2_assembler_summary.md  STAGE_3_linker_summary.md  TEAM_ROLES.md  TESTING_REPORT.md  TEST_GUIDE.md  TEST_UPDATE_SUMMARY.md  VERIFICATION_REPORT.md  中期内容.md
examples/: basic_arithmetic.c  bios_v2.c  bios_v2.s  bitwise_operations.c  calculator_minirv.c  calculator_minirv.s  calculator_v2.c  (+9 more)
(+1112 files in other folders)
